--- a/manifest.json
+++ b/manifest.json
@@ -103,7 +103,7 @@
       "url": "/?page=live",
       "icons": [
         {
-          "src": "/icons/shortcut-live.png",
+          "src": "/icons/android/android-launchericon-96-96.png",
           "sizes": "96x96",
           "type": "image/png"
         }
@@ -116,7 +116,7 @@
       "url": "/?page=history",
       "icons": [
         {
-          "src": "/icons/shortcut-history.png",
+          "src": "/icons/android/android-launchericon-96-96.png",
           "sizes": "96x96", 
           "type": "image/png"
         }
@@ -129,7 +129,7 @@
       "url": "/?page=config",
       "icons": [
         {
-          "src": "/icons/shortcut-config.png",
+          "src": "/icons/android/android-launchericon-96-96.png",
           "sizes": "96x96",
           "type": "image/png"
         }
@@ -159,5 +159,9 @@
         "application/json": [".json"]
       }
     }
-  ]
+  ],
+  "prefer_related_applications": false,
+  "iarc_rating_id": "",
+  "scope_extensions": [],
+  "id": "morph-messaging-pwa"
 }
