--- a/package.json
+++ b/package.json
@@ -3,5 +3,10 @@
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
     "web-push": "^3.6.7"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11"
   }
 }
